@@ -13,17 +13,17 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-    @Bean
-    CorsWebFilter corsWebFilter(@Value("${cors.allowed-origins}") String origins) {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of(origins.split(",")));
-        config.setAllowedMethods(Arrays.asList("POST", "GET")); // TODO: Check others required methods
-        config.setAllowedHeaders(List.of(CorsConfiguration.ALL));
+  @Bean
+  CorsWebFilter corsWebFilter(@Value("${cors.allowed-origins}") String origins) {
+    CorsConfiguration config = new CorsConfiguration();
+    config.setAllowCredentials(true);
+    config.setAllowedOrigins(List.of(origins.split(",")));
+    config.setAllowedMethods(Arrays.asList("POST", "GET")); // TODO: Check others required methods
+    config.setAllowedHeaders(List.of(CorsConfiguration.ALL));
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", config);
 
-        return new CorsWebFilter(source);
-    }
+    return new CorsWebFilter(source);
+  }
 }
